@@ -8,7 +8,7 @@ cd /MCserver
 JAR=./MCserver_${MC_VERSION}.jar
 
 while [ true ]; do
-  java -Xmx4G -Xms1024M -Xmn1G -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar $JAR nogui
+  java -Xmx4G -Xms1024M -Xmn1G -jar $JAR nogui
   if [ $? -eq 0 ]; then
     break
   fi
